Add screenshot. Add DELETE method. Add README.

--- a/attachments/console.html
+++ b/attachments/console.html
@@ -38,6 +38,7 @@
           <option value="get">GET</option>
           <option value="put">PUT</option>
           <option value="post">POST</option>
+          <option value="delete">DELETE</option>
         </select>
         <input id="url" name="url" type="text" placeholder="relative url" autofocus />
         <textarea placeholder="json data"></textarea>
